--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="https://github.com/bryanmcdee"><img class="profile-pic img-circle" src="img/profile-pic.jpg"></a>
         </div>
         <div class="col-xs-12 text-center">
-            <a href="https://github.com/bryanmcdee">BryanMcDonald.com</a>
+            <a href="http://bryanmcdonald.com">BryanMcDonald.com</a>
         </div>
     </div>
     <!-- Page Content -->
