--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- /.intro-header -->
     <div class="col-xs-12">
         <div class="col-xs-12 text-center">
-            <a href="https://github.com/bryanmcdee"><img class="profile-pic img-circle" src="img/profile-pic.jpg"></a>
+            <a href="http://bryanmcdonald.com"><img class="profile-pic img-circle" src="img/profile-pic.jpg"></a>
         </div>
         <div class="col-xs-12 text-center">
             <a href="http://bryanmcdonald.com">BryanMcDonald.com</a>
