Updated repo description.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <!-- Page Content -->
     <div class="col-md-12">
-        <h2 class="text-center">Github Repositories</h2>
+        <h2 class="text-center">GitHub Repositories</h2>
         <div class="col-sm-6 text-center">
             <div class="thumbnail">
             <div class="caption">
