--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
                         <i class="fa fa-check-square-o fa-lg icon-padding-right">&nbsp;Touch Mudder</i>
                         <i class="fa fa-check-square-o fa-lg">&nbsp;BBQer</i>
                         </div>
-                        
-                        <!--
-                        <div style="padding-top:25px;">
-                        <a href="http://bryanmcdonald.com/" class="minimal button" style="font-size:.6em;">Visit My Website</a>
-                        </div>-->
                         </br>
                         </br>
                         <ul class="list-inline intro-social-buttons">
@@ -84,28 +79,55 @@
     <!-- Page Content -->
     <div class="col-md-12">
         <h2 class="text-center">GitHub Repositories</h2>
-        <div class="col-sm-6 text-center">
-            <div class="thumbnail">
-            <div class="caption">
-                <h3><a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">Udacity iOS Nanodegree</a></h3>
-                <p>iOS apps that were created for Udacity's 
-                    <a href="https://www.udacity.com/nanodegree" target="_blank"> iOS Nanodegree </a>program.</p>
+        <div class="col-md-12">
+            <div class="col-sm-6 text-center">
+                <div class="thumbnail">
+                <div class="caption">
+                    <h3><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
+                    <p>A website built with Bootstrap and Font Awesome.</p>
+                </div>
+                    <a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">
+                        <img src="img/responsive-about-me-thumbnail.png">
+                    </a>
+                </div>
             </div>
-                <a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">
-                    <img src="img/appScreenshot1.png">
-                </a>
+            <div class="col-sm-6 text-center">
+                <div class="thumbnail">
+                <div class="caption">
+                    <h3><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
+                    <p>A contact form built with Bootstrap, Ajax, PHP, and Bootstrap Validator.</p>
+                </div>
+                    <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
+                        <img src="img/bootstrap-ajax-php-thumbnail.png">
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="col-sm-6 text-center">
-            <div class="thumbnail">
-            <div class="caption">
-                <h3><a href="https://github.com/bryanmcdee/Hacking-With-Swift">Hacking With Swift</a></h3>
-                <p>iOS apps that were created for the 
-                    <a href="https://www.hackingwithswift.com" target="_blank"> Hacking with Swift </a> training course.</p>
+        
+        <div class="col-md-12">
+            <div class="col-sm-6 text-center">
+                <div class="thumbnail">
+                <div class="caption">
+                    <h3><a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">Udacity iOS Nanodegree</a></h3>
+                    <p>iOS apps that were created for Udacity's 
+                        <a href="https://www.udacity.com/nanodegree" target="_blank"> iOS Nanodegree </a>program.</p>
+                </div>
+                    <a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">
+                        <img src="img/appScreenshot1.png">
+                    </a>
+                </div>
             </div>
-                <a href="https://github.com/bryanmcdee/Hacking-With-Swift">
-                    <img src="img/appScreenshot2.png">    
-                </a>        
+            <div class="col-sm-6 text-center">
+                <div class="thumbnail">
+                <div class="caption">
+                    <h3><a href="https://github.com/bryanmcdee/Hacking-With-Swift">Hacking With Swift</a></h3>
+                    <p>iOS apps that were created for the 
+                        <a href="https://www.hackingwithswift.com" target="_blank"> Hacking with Swift </a> training course.</p>
+                </div>
+                    <a href="https://github.com/bryanmcdee/Hacking-With-Swift">
+                        <img src="img/appScreenshot2.png">    
+                    </a>        
+                </div>
             </div>
         </div>
     </div>
