Add links and images to the responsive-zen repo.

--- a/index.html
+++ b/index.html
@@ -80,26 +80,43 @@
     <div class="col-md-12">
         <h2 class="text-center">GitHub Repositories</h2>
         <div class="col-md-12">
-            <div class="col-sm-6 text-center">
+            <div class="col-sm-4 text-center">
                 <div class="thumbnail">
-                <div class="caption">
-                    <h3><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
-                    <p>A website built with Bootstrap and Font Awesome.</p>
-                </div>
-                    <a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">
-                        <img src="img/responsive-about-me-thumbnail.png">
-                    </a>
+                    <div class="caption">
+                        <h3 class=" portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
+                        <p>A website built with Bootstrap and Font Awesome.</p>
+                    </div>
+                    <div class="portfolio-website-image">
+                        <a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">
+                            <img src="img/responsive-about-me-thumbnail.png">
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="col-sm-6 text-center">
+            <div class="col-sm-4 text-center">
                 <div class="thumbnail">
-                <div class="caption">
-                    <h3><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
-                    <p>A contact form built with Bootstrap, Ajax, PHP, and Bootstrap Validator.</p>
+                    <div class="caption">
+                        <h3 class=" portfolio-website-title"><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
+                        <p>A contact form built with Bootstrap, Ajax, PHP, and Bootstrap Validator.</p>
+                    </div>
+                    <div class="portfolio-website-image">
+                        <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
+                            <img src="img/bootstrap-ajax-php-thumbnail.png">
+                        </a>
+                    </div>
                 </div>
-                    <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
-                        <img src="img/bootstrap-ajax-php-thumbnail.png">
-                    </a>
+            </div>
+            <div class="col-sm-4 text-center">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h3 class=" portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-Zen-Website">Responsive Zen Website</a></h3>
+                        <p>A website built with Bootstrap and Font Awesome.</p>
+                    </div>
+                    <div class="portfolio-website-image">
+                        <a href="https://github.com/bryanmcdee/Responsive-Zen-Website">
+                            <img src="img/responsive-zen-thumbnail.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
