--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
@@ -64,9 +63,10 @@
             </div>
         </div>
         <!-- /.container -->
-    </div>
+    </div>      
     <!-- /.intro-header -->
-    <div class="col-xs-12">
+    <div class="container-fluid">
+    <div class="col-xs-12">        
         <div class="col-xs-12 text-center">
             <a href="http://bryanmcdonald.com"><img class="profile-pic img-circle" src="img/profile-pic.jpg"></a>
         </div>
@@ -74,79 +74,81 @@
             <a href="http://bryanmcdonald.com">BryanMcDonald.com</a>
         </div>
     </div>
-    <!-- Page Content -->
-    <div class="col-md-12">
-        <h2 class="text-center">GitHub Repositories</h2>
-        <div class="col-md-12 clearfix">
-            <div class="col-sm-4 text-center">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
-                        <p class="portfolio-website-caption">A website built with Bootstrap and Font Awesome.</p>
-                    </div>
-                    <div class="portfolio-website-image">
-                        <a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">
-                            <img src="img/responsive-about-me-thumbnail.png">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 text-center">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
-                        <p class="portfolio-website-caption">A contact form built with Bootstrap, Ajax, PHP, and Bootstrap Validator.</p>
-                    </div>
-                    <div class="portfolio-website-image">
-                        <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
-                            <img src="img/bootstrap-ajax-php-thumbnail.png">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 text-center">
-                <div class="thumbnail">
-                    <div class="caption">
-                        <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-Zen-Website">Responsive Zen Website</a></h3>
-                        <p class="portfolio-website-caption">A website built with Bootstrap and Font Awesome.</p>
-                    </div>
-                    <div class="portfolio-website-image">
-                        <a href="https://github.com/bryanmcdee/Responsive-Zen-Website">
-                            <img src="img/responsive-zen-thumbnail.png">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="col-md-12 clearfix">
-            <div class="col-sm-6 text-center">
-                <div class="thumbnail">
-                <div class="caption">
-                    <h3><a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">Udacity iOS Nanodegree</a></h3>
-                    <p>iOS apps that were created for Udacity's 
-                        <a href="https://www.udacity.com/nanodegree" target="_blank"> iOS Nanodegree </a>program.</p>
-                </div>
-                    <a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">
-                        <img src="img/appScreenshot1.png">
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-6 text-center">
-                <div class="thumbnail">
-                <div class="caption">
-                    <h3><a href="https://github.com/bryanmcdee/Hacking-With-Swift">Hacking With Swift</a></h3>
-                    <p>iOS apps that were created for the 
-                        <a href="https://www.hackingwithswift.com" target="_blank"> Hacking with Swift </a> training course.</p>
-                </div>
-                    <a href="https://github.com/bryanmcdee/Hacking-With-Swift">
-                        <img src="img/appScreenshot2.png">    
-                    </a>        
-                </div>
-            </div>
-        </div>
     </div>
-
+    <!-- Page Content -->
+    <div class="container-fluid">     
+        <div class="col-md-12 clearfix">
+            <h2 class="text-center">GitHub Repositories</h2>
+            <div class="col-md-12 clearfix">
+                <div class="col-sm-4 text-center">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
+                            <p class="portfolio-website-caption">A website built with Bootstrap and Font Awesome.</p>
+                        </div>
+                        <div class="portfolio-website-image">
+                            <a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">
+                                <img src="img/responsive-about-me-thumbnail.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
+                            <p class="portfolio-website-caption">A contact form built with Bootstrap, Ajax, PHP, and Bootstrap Validator.</p>
+                        </div>
+                        <div class="portfolio-website-image">
+                            <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
+                                <img src="img/bootstrap-ajax-php-thumbnail.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-Zen-Website">Responsive Zen Website</a></h3>
+                            <p class="portfolio-website-caption">A website built with Bootstrap and Font Awesome.</p>
+                        </div>
+                        <div class="portfolio-website-image">
+                            <a href="https://github.com/bryanmcdee/Responsive-Zen-Website">
+                                <img src="img/responsive-zen-thumbnail.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-12 clearfix">
+                <div class="col-sm-6 text-center">
+                    <div class="thumbnail">
+                    <div class="caption">
+                        <h3><a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">Udacity iOS Nanodegree</a></h3>
+                        <p>iOS apps that were created for Udacity's 
+                            <a href="https://www.udacity.com/nanodegree" target="_blank"> iOS Nanodegree </a>program.</p>
+                    </div>
+                        <a href="https://github.com/bryanmcdee/Udacity-iOS-Nanodegree">
+                            <img src="img/appScreenshot1.png">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm-6 text-center">
+                    <div class="thumbnail">
+                    <div class="caption">
+                        <h3><a href="https://github.com/bryanmcdee/Hacking-With-Swift">Hacking With Swift</a></h3>
+                        <p>iOS apps that were created for the 
+                            <a href="https://www.hackingwithswift.com" target="_blank"> Hacking with Swift </a> training course.</p>
+                    </div>
+                        <a href="https://github.com/bryanmcdee/Hacking-With-Swift">
+                            <img src="img/appScreenshot2.png">    
+                        </a>        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
     <!-- Footer -->
     <footer>
         <div class="container clearfix">
