--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="container clearfix">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright text-center text-muted small">Designed by Bryan McDonald</p>
+                    <p class="copyright text-center">Designed by Bryan McDonald</p>
                 </div>
             </div>
         </div>
@@ -165,8 +165,13 @@
     <!-- Bootstrap Core JavaScript -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- Custom -->
-    <script type="text/javascript" src="js/custom.js"></script>
-    
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            var myApp = new app();                           
+        });
+    </script>
+
 </body>
 
 </html>
