--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div class="portfolio-website-image">
                             <a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">
-                                <img src="img/responsive-about-me-thumbnail.png">
+                                <img class="img1" src="img/responsive-about-me-thumbnail.png">
                             </a>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                         </div>
                         <div class="portfolio-website-image">
                             <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
-                                <img src="img/bootstrap-ajax-php-thumbnail.png">
+                                <img class="img2" src="img/bootstrap-ajax-php-thumbnail.png">
                             </a>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         </div>
                         <div class="portfolio-website-image">
                             <a href="https://github.com/bryanmcdee/Responsive-Zen-Website">
-                                <img src="img/responsive-zen-thumbnail.png">
+                                <img class="img3" src="img/responsive-zen-thumbnail.png">
                             </a>
                         </div>
                     </div>
