--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-md-12 clearfix">
             <h2 class="text-center">GitHub Repositories</h2>
             <div class="col-md-12 clearfix">
-                <div class="col-sm-4 text-center">
+                <div class="col-sm-3 text-center">
                     <div class="thumbnail">
                         <div class="caption">
                             <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 text-center">
+                <div class="col-sm-3 text-center">
                     <div class="thumbnail">
                         <div class="caption">
                             <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 text-center">
+                <div class="col-sm-3 text-center">
                     <div class="thumbnail">
                         <div class="caption">
                             <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-Zen-Website">Responsive Zen Website</a></h3>
@@ -115,6 +115,19 @@
                         <div class="portfolio-website-image">
                             <a href="https://github.com/bryanmcdee/Responsive-Zen-Website">
                                 <img class="img3" src="img/responsive-zen-thumbnail.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3 class="portfolio-website-title"><a href="https://bryanmcdee.github.io/Full-Screen-Background-Video-Website">Fullscreen Video Website</a></h3>
+                            <p class="portfolio-website-caption">A responsive website with a fullscreen video background.</p>
+                        </div>
+                        <div class="portfolio-website-image">
+                            <a href="https://bryanmcdee.github.io/Full-Screen-Background-Video-Website">
+                                <img src="img/full-screen-video-thumbnail.png">
                             </a>
                         </div>
                     </div>
