--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-<head>    
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -9,12 +9,16 @@
 
     <link href="src/vendor/bootstrap-4.3.1/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="src/css/site.css" rel="stylesheet">
-    <link href="src/vendor/fontawesome-5.10.1/css/fontawesome.min.css" rel="stylesheet" type="text/css">    
+    <link href="src/vendor/fontawesome-5.10.1/css/fontawesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+    <div class="container-fluid">
+
+    </div>
     <script type="text/javascript" src="src/vendor/jQuery-3.4.1/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="src/vendor/bootstrap-4.3.1/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="src/vendor/bootstrap-4.3.1/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js">
+    </script>
     <script type="text/javascript" src="src/js/app.js"></script>
 </body>
 
