--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         
                         <div class="checkmark-lg">
                         <i class="fa fa-check-square-o fa-lg icon-padding-right">&nbsp;Software Engineer</i>
-                        <i class="fa fa-check-square-o fa-lg icon-padding-right">&nbsp;Real Estate Appraiser</i>
+                        <i class="fa fa-check-square-o fa-lg icon-padding-right">&nbsp;Former Industrial Engineer</i>
                         <i class="fa fa-check-square-o fa-lg icon-padding-right">&nbsp;Touch Mudder</i>
                         <i class="fa fa-check-square-o fa-lg">&nbsp;BBQer</i>
                         </div>
@@ -46,17 +46,17 @@
                         </br>
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://twitter.com/bryanmcdee" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/bryanmcdee/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                                <a href="https://github.com/bryanmcdee" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">GitHub</span></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/bryanmcdonaldgt" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/bryanmcdee" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">GitHub</span></a>
+                                <a href="https://www.instagram.com/bryanmcdee/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                             </li>
+                            <li>
+                                <a href="https://twitter.com/bryanmcdee" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            </li>                                                   
                         </ul>
                     </div>
                 </div>
@@ -67,9 +67,8 @@
     <!-- /.intro-header -->
     <div class="container-fluid">
     <div class="col-xs-12">        
-        <div class="col-xs-12 text-center">
-            <a href="http://bryanmcdonald.com"><img class="profile-pic img-circle" src="img/profile-pic.jpg"></a>
-        </div>
+        <div class="col-xs-12 text-center header-profile-pic">
+            <img class="profile-pic img-circle" src="img/profile-pic.jpg">        </div>
         <div class="col-xs-12 text-center">
             <a href="http://bryanmcdonald.com">BryanMcDonald.com</a>
         </div>
@@ -80,7 +79,7 @@
         <div class="col-md-12 clearfix">
             <h2 class="text-center">GitHub Repositories</h2>
             <div class="col-md-12 clearfix">
-                <div class="col-sm-3 text-center">
+                <div class="col-sm-4 text-center">
                     <div class="thumbnail">
                         <div class="caption">
                             <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-About-Me-Website">Responsive About Me Website</a></h3>
@@ -93,20 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
-                    <div class="thumbnail">
-                        <div class="caption">
-                            <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">Responsive Contact Form</a></h3>
-                            <p class="portfolio-website-caption">A contact form built with Bootstrap, Ajax, PHP, and Bootstrap Validator.</p>
-                        </div>
-                        <div class="portfolio-website-image">
-                            <a href="https://github.com/bryanmcdee/Bootstrap-Ajax-PHP-ContactForm">
-                                <img class="img2" src="img/bootstrap-ajax-php-thumbnail.png">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-sm-4 text-center">
                     <div class="thumbnail">
                         <div class="caption">
                             <h3 class="portfolio-website-title"><a href="https://github.com/bryanmcdee/Responsive-Zen-Website">Responsive Zen Website</a></h3>
@@ -119,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 text-center">
+                <div class="col-sm-4 text-center">
                     <div class="thumbnail">
                         <div class="caption">
                             <h3 class="portfolio-website-title"><a href="https://bryanmcdee.github.io/Full-Screen-Background-Video-Website">Fullscreen Video Website</a></h3>
